# bookmarks-local-ai

./: .aider.conf.yml  .aiderignore  .gitignore  AGENTS.md  CLAUDE.md  CONVENTIONS.md  CONVENTIONS.txt  README.md  bookmark_enricher.py  bookmark_importer.py  bookmark_intelligence.py  default_config.txt  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
core/: backup_manager.py  bookmark_loader.py  category_manager.py  category_suggester.py  config_manager.py  enricher.py  env_setup.py  importer.py  intelligence.py  models.py  progress_tracker.py  spinner.py  url_utils.py  vector_store.py  web_extractor.py
tests/: conftest.py  test_backup_manager_additional.py  test_bookmark_importer.py  test_bookmark_intelligence.py  test_bookmark_loader.py  test_category_manager.py  test_config.py  test_duplicate_detection.py  test_enhanced_enricher.py  test_enricher_batch.py  test_models.py  test_progress_tracker_additional.py  test_suggest_categories.py  test_vector_store.py  test_web_extractor.py
tests/fixtures/: sample_bookmarks.json
