[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookmarks-local-ai"
version = "0.1.0"
description = "A collection of scripts for managing bookmarks."
readme = "README.md"
license = { text = "BSD 3-Clause License" }
authors = [
    { name = "Jason Hamilton" }
]
dependencies = [
    "requests==2.32.4",
    "beautifulsoup4==4.13.4",
    "chromadb==1.0.15",
    "pydantic-settings==2.10.1",
    "ollama==0.5.1",
    "lxml",
    "hdbscan>=0.8.33",
    "scikit-learn==1.4.2",
    "numpy<2.0"
]

[project.scripts]
bookmark-enricher = "bookmark_enricher:main"
bookmark-intelligence = "bookmark_intelligence:main"
bookmark-importer = "bookmark_importer:main"

[tool.setuptools]
py-modules = [
    "bookmark_enricher",
    "bookmark_intelligence",
    "bookmark_importer",
]

[tool.setuptools.packages.find]
include = ["core"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "pytest-mock==3.14.1",
    "pytest-asyncio==1.1.0",
    "black==25.1.0",
    "ruff==0.12.3",
    "mypy==1.17.0",
    "isort==6.0.1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --tb=short --cov=core --cov-report=term-missing --cov-report=html:htmlcov"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# Standard flake8 rules
select = ["E", "F", "W"]
# You can add more rule sets as needed:
# "I" for isort-style import sorting
# "N" for naming conventions
# "B" for bugbear (common bugs)
# "UP" for pyupgrade (modern Python idioms)

[tool.black]
line-length = 88
